2009-04-16  Sebastien Merle  <sebastien@fluendo.com>

	reviewed by: Arek, Zaheer

	* flumotion/component/bouncers/bouncer.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_component_bouncers_bouncer_authsession.py:
	* flumotion/test/test_component_bouncers_bouncer_authsession.py
	  (added):
	Added a helper bouncer for authentication sessions
	like challenge/response. It provide a way to store and retrieve
	data related to the session, and validate/cancel sessions.

2009-04-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/command/main.py:
	Make sure use_ssl gets passed to correct parameter! This fixes
	connection to non ssl managers with flumotion-command.

2009-04-16  Pedro Gracia  <pedro@flumotion.com>

	reviewed by: Jan Urbanski  <jurbanski@flumotion.com> 

	* flumotion/monitor/nagios/main.py:
	* flumotion/monitor/nagios/stream.py:
	Store dumps if nagios check fails testing and check bouncer status too.

2009-04-15  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* flumotion/test/test_import.py:
        Import flumotion.admin.rrdmon only if rrdtool is installed.

2009-04-15  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* flumotion/test/Makefile.am:
	* flumotion/test/test_import.py:
 	Add a test case that imports all flumotion modules.

2009-04-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/command/main.py:
	flumotion-command's transport parameter should expect an string
	parameter but it was treated as a flag in the option parser.

2009-04-07  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/eventcalendar.py:
	* flumotion/test/test_common_eventcalendar.py:
	The RECURRENCE-ID in iCal files is returned as a vDDDTypes object, not
	a string. Fixes #1269, parsing RECURRENCE-IDs with TZID.

2009-04-07  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/eventcalendar.py:
	* flumotion/test/test_common_eventcalendar.py: