@@ -50,15 +50,15 @@ class AuthSessionBouncerTestCase(testsuite.TestCase):
         self.assertNotEquals(keycard, answer)
 
         # Bouncer do not know about the keycard
-        self.assertFalse(self.bouncer.hasKeycard(answer))
-        self.assertFalse(self.bouncer.hasAuthSession(answer))
+        self.failIf(self.bouncer.hasKeycard(answer))
+        self.failIf(self.bouncer.hasAuthSession(answer))
         self.assertEqual(None, self.bouncer.getAuthSessionInfo(answer))
 
         # Bouncer start an authentication session
-        self.assertTrue(self.bouncer.startAuthSession(answer))
+        self.failUnless(self.bouncer.startAuthSession(answer))
         self.assertEquals(answer.state, keycards.REQUESTING)
-        self.assertFalse(self.bouncer.hasKeycard(answer))
-        self.assertTrue(self.bouncer.hasAuthSession(answer))
+        self.failIf(self.bouncer.hasKeycard(answer))
+        self.failUnless(self.bouncer.hasAuthSession(answer))
         self.assertEqual(answer, self.bouncer.getAuthSessionInfo(answer))
 
         # Bouncer send back the keycard to the client
@@ -72,10 +72,10 @@ class AuthSessionBouncerTestCase(testsuite.TestCase):
         self.assertNotEquals(challenge, response)
 
         # Bouncer state did not change, and the keycard are associated
-        self.assertFalse(self.bouncer.hasKeycard(answer))
-        self.assertFalse(self.bouncer.hasKeycard(response))
-        self.assertTrue(self.bouncer.hasAuthSession(answer))
-        self.assertTrue(self.bouncer.hasAuthSession(response))
+        self.failIf(self.bouncer.hasKeycard(answer))
+        self.failIf(self.bouncer.hasKeycard(response))
+        self.failUnless(self.bouncer.hasAuthSession(answer))
+        self.failUnless(self.bouncer.hasAuthSession(response))
         self.assertEqual(answer, self.bouncer.getAuthSessionInfo(answer))
         self.assertEqual(answer, self.bouncer.getAuthSessionInfo(response))
         self.assertNotEqual(response,
@@ -84,32 +84,32 @@ class AuthSessionBouncerTestCase(testsuite.TestCase):
                             self.bouncer.getAuthSessionInfo(response))
 
         # Bouncer confirm the authentication
-        self.assertTrue(self.bouncer.confirmAuthSession(response))
+        self.failUnless(self.bouncer.confirmAuthSession(response))
         self.assertEquals(response.state, keycards.AUTHENTICATED)
         self.assertEquals(answer.state, keycards.REQUESTING)
-        self.assertFalse(self.bouncer.hasKeycard(answer))
-        self.assertTrue(self.bouncer.hasKeycard(response))
-        self.assertFalse(self.bouncer.hasAuthSession(answer))
-        self.assertFalse(self.bouncer.hasAuthSession(response))
+        self.failIf(self.bouncer.hasKeycard(answer))
+        self.failUnless(self.bouncer.hasKeycard(response))
+        self.failIf(self.bouncer.hasAuthSession(answer))
+        self.failIf(self.bouncer.hasAuthSession(response))
         self.assertEqual(None, self.bouncer.getAuthSessionInfo(answer))
         self.assertEqual(None, self.bouncer.getAuthSessionInfo(response))
 
     def testEarlyCanceling(self):
         keycard = keycards.Keycard()
         answer = pb.unjelly(pb.jelly(keycard))
-        self.assertTrue(self.bouncer.startAuthSession(answer))
+        self.failUnless(self.bouncer.startAuthSession(answer))
 
         # Bouncer cancel the authentication
         self.bouncer.cancelAuthSession(answer)
         self.assertEquals(answer.state, keycards.REFUSED)
-        self.assertFalse(self.bouncer.hasKeycard(answer))
-        self.assertFalse(self.bouncer.hasAuthSession(answer))
+        self.failIf(self.bouncer.hasKeycard(answer))
+        self.failIf(self.bouncer.hasAuthSession(answer))
         self.assertEqual(None, self.bouncer.getAuthSessionInfo(answer))
 
     def testLateCanceling(self):
         keycard = keycards.Keycard()
         answer = pb.unjelly(pb.jelly(keycard))
-        self.assertTrue(self.bouncer.startAuthSession(answer))
+        self.failUnless(self.bouncer.startAuthSession(answer))
         challenge = pb.unjelly(pb.jelly(answer))
         response = pb.unjelly(pb.jelly(challenge))
 
@@ -117,10 +117,10 @@ class AuthSessionBouncerTestCase(testsuite.TestCase):
         self.bouncer.cancelAuthSession(response)
         self.assertEquals(response.state, keycards.REFUSED)
         self.assertEquals(answer.state, keycards.REQUESTING)
-        self.assertFalse(self.bouncer.hasKeycard(answer))
-        self.assertFalse(self.bouncer.hasKeycard(response))
-        self.assertFalse(self.bouncer.hasAuthSession(answer))
-        self.assertFalse(self.bouncer.hasAuthSession(response))
+        self.failIf(self.bouncer.hasKeycard(answer))
+        self.failIf(self.bouncer.hasKeycard(response))
+        self.failIf(self.bouncer.hasAuthSession(answer))
+        self.failIf(self.bouncer.hasAuthSession(response))
         self.assertEqual(None, self.bouncer.getAuthSessionInfo(answer))
         self.assertEqual(None, self.bouncer.getAuthSessionInfo(response))
 
@@ -130,34 +130,34 @@ class AuthSessionBouncerTestCase(testsuite.TestCase):
         answer = pb.unjelly(pb.jelly(keycard))
 
         # Bouncer stqrt a session and return the keycard to the client
-        self.assertTrue(self.bouncer.startAuthSession(answer))
+        self.failUnless(self.bouncer.startAuthSession(answer))
         challenge = pb.unjelly(pb.jelly(answer))
 
-        self.assertFalse(self.bouncer.hasKeycard(answer))
-        self.assertTrue(self.bouncer.hasAuthSession(answer))
+        self.failIf(self.bouncer.hasKeycard(answer))
+        self.failUnless(self.bouncer.hasAuthSession(answer))
         self.assertEqual(answer, self.bouncer.getAuthSessionInfo(answer))
 
         # Then the session expire
         self.bouncer._expire()
 
-        self.assertFalse(self.bouncer.hasKeycard(answer))
-        self.assertFalse(self.bouncer.hasAuthSession(answer))
+        self.failIf(self.bouncer.hasKeycard(answer))
+        self.failIf(self.bouncer.hasAuthSession(answer))
         self.assertEqual(None, self.bouncer.getAuthSessionInfo(answer))
 
         # The client return the response keycard
         response = pb.unjelly(pb.jelly(challenge))
 
-        self.assertFalse(self.bouncer.hasKeycard(response))
-        self.assertFalse(self.bouncer.hasAuthSession(response))
+        self.failIf(self.bouncer.hasKeycard(response))
+        self.failIf(self.bouncer.hasAuthSession(response))
         self.assertEqual(None, self.bouncer.getAuthSessionInfo(response))
 
         # The confirmation is refused
-        self.assertFalse(self.bouncer.confirmAuthSession(response))
+        self.failIf(self.bouncer.confirmAuthSession(response))
         self.assertEquals(response.state, keycards.REFUSED)
         self.assertEquals(answer.state, keycards.REQUESTING)
-        self.assertFalse(self.bouncer.hasKeycard(answer))
-        self.assertFalse(self.bouncer.hasKeycard(response))
-        self.assertFalse(self.bouncer.hasAuthSession(answer))
-        self.assertFalse(self.bouncer.hasAuthSession(response))
+        self.failIf(self.bouncer.hasKeycard(answer))
+        self.failIf(self.bouncer.hasKeycard(response))
+        self.failIf(self.bouncer.hasAuthSession(answer))
+        self.failIf(self.bouncer.hasAuthSession(response))
         self.assertEqual(None, self.bouncer.getAuthSessionInfo(answer))
         self.assertEqual(None, self.bouncer.getAuthSessionInfo(response))
